test/arrays/return/array-lvalue-error.good
array-lvalue-error.chpl:16: error: non-lvalue actual is passed to 'ref' formal 'A' of mutateAndSum()
